Updated copyright year to 2019 and removed Google+ links

--- a/app/src/main/res/values-af/strings.xml
+++ b/app/src/main/res/values-af/strings.xml
@@ -58,7 +58,7 @@
         \nAlso, Torchie <b>DOES NOT HAVE INTERNET PERMISSION</b>, so it is impossible to <i>send</i> anything to anyone\n\n Torchie CANNOT <i>COLLECT</i> anything from anyone. Feel free to enable Torchie functionality! <a href="https://torchieapp.wordpress.com/help/">Leer nog</a> </string>
     <string name="permission">Aktiveer Flitsie Funksionaliteit?</string>
 
-    <string name="about_note"><i>Flitsie - Raak vir Flits &#169; 2016</i> \n\n<b>Flitsie</b> is deur twee broers gemaak,\nMerbin J Anselm en Rebin J Anselm\nanselmbros@gmail.com\n\nBaie danke aan die onderstaande reuse harte, wat gehelp het om Flitsie te vertaal</string>
+    <string name="about_note"><i>Flitsie - Raak vir Flits &#169; 2019</i> \n\n<b>Flitsie</b> is deur twee broers gemaak,\nMerbin J Anselm en Rebin J Anselm\nhello@anselm.in\n\nBaie danke aan die onderstaande reuse harte, wat gehelp het om Flitsie te vertaal</string>
     <string name="about_anselm">Inlugting oor Anselm &amp; Anselm</string>
     <string name="official_website">Besoek amptelike webblad</string>
     <string name="join_community">Sluit aan by die Beta gemeenskap</string>
