--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -58,7 +58,7 @@
         \nJenže, Torchie <b>NEMÁ OPRÁVNĚNÍ PRO PŘÍSTUP K INTERNETU</b>, takže je nemožné, aby <i>posílal</i> cokoliv komukoliv.\n\n Torchie NEMŮŽE <i>SBÍRAT</i> cokoliv od kohokoliv. Nebojte se Možnosti Torchie povolit! <a href="https://torchieapp.wordpress.com/help/">Nastuduj si více</a> </string>
     <string name="permission">Povolit Možnosti Torchie?</string>
 
-    <string name="about_note"><i>Torchie - Dotykem ke světlu &#169; 2015</i> \n\n<b>Torchie</b> je vytvořena dvěma bratry\nMerbin J Anselm a Rebin J Anselm\nanselmbros@gmail.com\n\nVelmi děkujeme následujícím skvělým srdíčkům, která pomohla s překladem Torchie</string>
+    <string name="about_note"><i>Torchie - Dotykem ke světlu &#169; 2015</i> \n\n<b>Torchie</b> je vytvořena dvěma bratry\nMerbin J Anselm a Rebin J Anselm\nhello@anselm.in\n\nVelmi děkujeme následujícím skvělým srdíčkům, která pomohla s překladem Torchie</string>
     <string name="about_anselm">O Anselm &amp; Anselm</string>
     <string name="official_website">Navštiv oficiální stránku</string>
     <string name="join_community">Připoj se k Beta komunitě</string>
