--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -58,7 +58,7 @@
         \nAusserdem, Torchie <b>HAT KEINEN INTERNET ZUGRIFF</b>, es ist also unmöglich <i>etwas zu senden</i> an irgendwen\n\n Torchie KANN NICHT <i>DATEN SAMMELN</i> weder von Dir noch anderen. Probiere die Torchie Funktionen aus! <a href="https://torchieapp.wordpress.com/help/">Mehr darüber!</a> </string>
     <string name="permission">Einschalten der Torchie Funktionen?</string>
 
-    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2015</i> \n\n<b>Torchie</b> wurde von 2 Brüdern programmiert\nMerbin J Anselm and Rebin J Anselm\nanselmbros@gmail.com\n\nVielen Dank an folgende Leute, die uns auch bei der Übersetzung geholfen haben</string>
+    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2015</i> \n\n<b>Torchie</b> wurde von 2 Brüdern programmiert\nMerbin J Anselm and Rebin J Anselm\nhello@anselm.in\n\nVielen Dank an folgende Leute, die uns auch bei der Übersetzung geholfen haben</string>
     <string name="about_anselm">Über Anselm &amp; Anselm</string>
     <string name="official_website">Besuche unsere offizielle Webseite</string>
     <string name="join_community">Bei der Beta-Version mitmachen</string>
