--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -58,8 +58,8 @@
         \nهمچنین, تورچی <b> دسترسی اینترنت نداره</b>, پس غیر ممکنه که بشه این اطلاعات رو به کسی فرستاد.\n\n تورچی نمیتونه اطلاعاتی رو از کسی<i> ذخیره</i> کنه. در استفاده از تورچی راحت باشید! <a href="https://torchieapp.wordpress.com/help/">اطلاعات بیشتر</a> </string>
     <string name="permission">تورچی فعال شود؟</string>
 
-    <string name="about_note"><i>تورچی - لمس برای نور &#169; 2016</i> \n\n<b>تورچی</b> توسط دو برادر به نام های\nMerbin J Anselm و Rebin J Anselm ساخته شده.
-\nanselmbros@gmail.com\n\nتشکر فراوان از کسانی که در ترجمه تورچی به ما کمک کردند</string>
+    <string name="about_note"><i>تورچی - لمس برای نور &#169; 2019</i> \n\n<b>تورچی</b> توسط دو برادر به نام های\nMerbin J Anselm و Rebin J Anselm ساخته شده.
+\nhello@anselm.in\n\nتشکر فراوان از کسانی که در ترجمه تورچی به ما کمک کردند</string>
     <string name="about_anselm">درباره Anselm &amp; Anselm</string>
     <string name="official_website">رفتن به سایت رسمی</string>
     <string name="join_community">پیوستن به گروه نسخه آزمایشی(بتا)</string>
