--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -59,7 +59,7 @@
         \nTovábbá, a Torchie <b>NINCS SZÜKSÉGE INTERNET HOZZÁFÉRÉSRE</b>, szóval lehetetlen bármit is <i>elküldeni</i> akárkinek\n\n A Torchie NEM <i>KÉPES</i> semmiféle gyűjtésre és küldésre. Nyugodtan engedélyezd a Torchie Működést! <a href="https://torchieapp.wordpress.com/help/">Tudj meg többet</a> </string>
     <string name="permission">Engedélyezed a Torchie Működést?</string>
 
-    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2016</i> \n\nA <b>Torchie</b> két testvér által készült\nMerbin J Anselm és Rebin J Anselm\nanselmbros@gmail.com\n\n Sok köszönet mindenkinek, aki segített lefordítani a Torchie-t</string>
+    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2019</i> \n\nA <b>Torchie</b> két testvér által készült\nMerbin J Anselm és Rebin J Anselm\nhello@anselm.in\n\n Sok köszönet mindenkinek, aki segített lefordítani a Torchie-t</string>
     <string name="about_anselm">Többet Anselm &amp; Anselm-ről</string>
     <string name="official_website">Hivatalos oldal</string>
     <string name="join_community">Csatlakozz a Béta Közösséghez</string>
