--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -58,7 +58,7 @@
         \nSelain itu Torchie <b>TIDAK MEMILIKI PERIZINAN INTERNET</b>, sehingga tidak mungkin bagi Torchie untuk <i>mengirim</i> apapun pada siapapun\n\n Torchie TIDAK DAPAT <i>MENGUMPULKAN</i> apapun dari siapapun. Anda tidak perlu khawatir untuk menggunakan Torchie! <a href="https://torchieapp.wordpress.com/help/">Pelajari lebih lanjut</a> </string>
     <string name="permission">Aktifkan Fungsionalitas Torchie?</string>
 
-    <string name="about_note"><i>Torchie - Tekan untuk Senter &#169; 2016</i> \n\n<b>Torchie</b> dibuat oleh dua bersaudara\nMerbin J Anselm dan Rebin J Anselm\nanselmbros@gmail.com\n\nTerima kasih pada para sukarelawan yang telah membantu menterjemahkan Torchie</string>
+    <string name="about_note"><i>Torchie - Tekan untuk Senter &#169; 2019</i> \n\n<b>Torchie</b> dibuat oleh dua bersaudara\nMerbin J Anselm dan Rebin J Anselm\nhello@anselm.in\n\nTerima kasih pada para sukarelawan yang telah membantu menterjemahkan Torchie</string>
     <string name="about_anselm">Tentang Anselm &amp; Anselm</string>
     <string name="official_website">Kunjungi Laman Resmi</string>
     <string name="join_community">Bergabung Komunitas Beta</string>
