--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -62,7 +62,7 @@
     <string name="facebook">Facebook</string>
     <string name="google_plus">Google+</string>
     <string name="thank_you_note">Wasz wkład motywuje nas do działania, pamiętajcie o rozpowszechnieniu informacji o naszej aplikacji</string>
-    <string name="about_note"><i>Torchie - stuknij, aby włączyć latarkę &#169; 2016</i>Autorem <b>Torchie</b> jest rodzeństwo \nMerbin J Anselm i Rebin J Anselm\nanselmbros@gmail.com\n\nPodziękowania dla wszystkich, odpowiedzialnych za lokalizację Torchie</string>
+    <string name="about_note"><i>Torchie - stuknij, aby włączyć latarkę &#169; 2019</i>Autorem <b>Torchie</b> jest rodzeństwo \nMerbin J Anselm i Rebin J Anselm\nhello@anselm.in\n\nPodziękowania dla wszystkich, odpowiedzialnych za lokalizację Torchie</string>
 
     <string name="indefinite">Nieograniczony</string>
     <string name="minutes">Minut(y)</string>
