--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -58,7 +58,7 @@
     \nAlso, Torchie <b>NÃO TEM PERMISSÕES DE INTERNET</b>, por isso é impossivel <i>enviar</i> algo para alguém\n\n O Torchie NÃO <i>COLECTA</i> nada de ninguém. Por isso acitva o Torchie agora! <a href="https://torchieapp.wordpress.com/help/">Sabe mais</a> </string>
     <string name="permission">Activar a funcionalidade Torchie?</string>
 
-    <string name="about_note"><i>Torchie - Toca para iluminar &#169; 2016</i> \n\n<b>Torchie</b> é desenvolvido por 2 irmãos\nMerbin J Anselm and Rebin J Anselm\nanselmbros@gmail.com\n\nMuito obrigado a todos que ajudaram a traduzir o Torchie</string>
+    <string name="about_note"><i>Torchie - Toca para iluminar &#169; 2019</i> \n\n<b>Torchie</b> é desenvolvido por 2 irmãos\nMerbin J Anselm and Rebin J Anselm\nhello@anselm.in\n\nMuito obrigado a todos que ajudaram a traduzir o Torchie</string>
     <string name="about_anselm">Sobre Anselm &amp; Anselm</string>
     <string name="official_website">Visita o site oficial</string>
     <string name="join_community">Junta-te Beta Community</string>
