--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -59,7 +59,7 @@
         \nasemeni, Torchie <b>NU ARE ACCES LA INTERNET</b>, asa ca e imposibil sa <i>trimita</i> ceva catre cineva\n\n Torchie NU POATE <i>COLECTA</i> nimic de la nimeni. Va rugam permiteti Torchie astfel nu va functiona corect! <a href="https://torchieapp.wordpress.com/help/">Afla mai multe</a> </string>
     <string name="permission">Activezi functiile Torchie?</string>
 
-    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2016</i> \n\n<b>Torchie</b> este facut de doi frati \nMerbin J Anselm si Rebin J Anselm\nanselmbros@gmail.com\n\nMulte multumiri oamenilor cu inima mare, care a ajutat la traducerea Torchie</string>
+    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2019</i> \n\n<b>Torchie</b> este facut de doi frati \nMerbin J Anselm si Rebin J Anselm\nhello@anselm.in\n\nMulte multumiri oamenilor cu inima mare, care a ajutat la traducerea Torchie</string>
     <string name="about_anselm">Despre Anselm &amp; Anselm</string>
     <string name="official_website">Viziteaza situl oficial</string>
     <string name="join_community">Inscrie-te in comunitatea BETA</string>
