--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -58,7 +58,7 @@
         \nКроме того, у Torchie <b>НЕТ РАЗРЕШЕНИЯ НА ИНТЕРНЕТ</b>, поэтому приложение не может ничего никому <i>отправить</i>\n\n Torchie НЕ МОЖЕТ <i>СОБИРАТЬ</i> чьи-либо данные. НЕ опасайтесь, включайте функционал Torchie! <a href="https://torchieapp.wordpress.com/help/">Подробнее</a> </string>
     <string name="permission">Включить функционал Torchie?</string>
 
-    <string name="about_note"><i>Torchie - нажмите для фонарика &#169; 2016</i> \n\n<b>Torchie</b> создано двумя братьями\nMerbin J Anselm и Rebin J Anselm\nanselmbros@gmail.com\n\nОгромное спасибо следующим людям, от всего сердца помогавшим мне с
+    <string name="about_note"><i>Torchie - нажмите для фонарика &#169; 2019</i> \n\n<b>Torchie</b> создано двумя братьями\nMerbin J Anselm и Rebin J Anselm\nhello@anselm.in\n\nОгромное спасибо следующим людям, от всего сердца помогавшим мне с
 переводом Torchie</string>
     <string name="about_anselm">Об Anselm &amp; Anselm</string>
     <string name="official_website">Посетить официальный сайт</string>
