--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -58,7 +58,7 @@
         \nTakođe, Bakljica <b>NE TRAŽI DOZVOLU ZA PRISTUP INTERNETU</b>, tako da neće <i>slati</i> bilo šta bilo kome\n\n Bakljica NE <i>SAKUPLJA</i> bilo kakve informacije. Slobodno omogućite Bakljicu! <a href="https://torchieapp.wordpress.com/help/">Saznaj više (na engleskom)</a> </string>
     <string name="permission">Omogući funkcionalnost Bakljice?</string>
 
-    <string name="about_note"><i>Bakljica - Pritisni za blic &#169; 2016</i> \n\n<b>Bakljicu</b> su kreirala dva brata\nMerbin J Anselm i Rebin J Anselm\nanselmbros@gmail.com\n\nHvala svima koji su pomogli u prevodu Bakljice!</string>
+    <string name="about_note"><i>Bakljica - Pritisni za blic &#169; 2019</i> \n\n<b>Bakljicu</b> su kreirala dva brata\nMerbin J Anselm i Rebin J Anselm\nhello@anselm.in\n\nHvala svima koji su pomogli u prevodu Bakljice!</string>
     <string name="about_anselm">O Anselmu &amp; Anselm</string>
     <string name="official_website">Poseti zvaničan sajt</string>
     <string name="join_community">Pridruži se Beta zajednici</string>
