--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -59,7 +59,7 @@
     <string name="permission_warn">Що се отнася до Позволението за достъп до клавиатурата Ви, уви, вината е на Android. Операционната система счита бутоните за звука за част от клавиатурата. Няма как Torchie да работи без това разрешение, но въпреки това приложението не събира данни за това, което пишете на телефона си. Също така, Torchie не изисква позволение за ползване на интернет, не събира никакви данни от който и да е било. Така че спокойно може да ползвата Torchie Функцията. Научете повече на https://torchieapp.wordpress.com</string>
     <string name="permission">Включване на Torchie функцията</string>
 
-    <string name="about_note"><b>Torchie</b> is made by two brothers\nMerbin J Anselm and Rebin J Anselm\nanselmbros@gmail.com\n\nMany thanks to following great hearts, who helped to translate Torchie</string>
+    <string name="about_note"><b>Torchie</b> is made by two brothers\nMerbin J Anselm and Rebin J Anselm\nhello@anselm.in\n\nMany thanks to following great hearts, who helped to translate Torchie</string>
     <string name="about_anselm">Кои са Анселм и Анселм?</string>
     <string name="official_website">Посетете официалния уебсайт</string>
     <string name="join_community">Присъедините се към Beta групата</string>
@@ -90,6 +90,6 @@
     <string name="torch_time_out">Таймер на фенерчето </string>
     <string name="language_select">Избиране на език</string>
 
-    <string name="notice">Torchie не се предлага с каквото и да е била гаранция. Това приложение е свободен софтуер, лицензиран под GNU General Public License v2.0. Изходния код на приложението може да бъде намерен на https://github.com/anselm94/torchie-android\n</string>
+    <string name="notice"><b>Torchie</b> v%1$s  &#169; 2019\n\nTorchie не се предлага с каквото и да е била гаранция. Това приложение е свободен софтуер, лицензиран под GNU General Public License v2.0. Изходния код на приложението може да бъде намерен на https://github.com/anselm94/torchie-android\n</string>
 
 </resources>
