--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -58,7 +58,7 @@
         \nAdemás, Torchie <b>NO TIENE PERMISO DE INTERNET</b>, así que es imposible <i>enviar</i> algo a alguién\n\n Torchie <b>NO RECOPILA</b> nada de nadie. Siéntete seguro de habilitar la función Torchie! <a href="https://torchieapp.wordpress.com/help/">Más sobre esto</a> </string>
     <string name="permission">¿Habilitar la Función Torchie?</string>
 
-    <string name="about_note"><i>Torchie - Toque para linterna &#169; 2015</i> \n\n<b>Torchie</b> está hecho por dos hermanos\nMerbin J Anselm y Rebin J Anselm\nanselmbros@gmail.com\n\nMuchas gracias a los siguientes, que con su gran corazón ayudaron a traducir Torchie</string>
+    <string name="about_note"><i>Torchie - Toque para linterna &#169; 2015</i> \n\n<b>Torchie</b> está hecho por dos hermanos\nMerbin J Anselm y Rebin J Anselm\nhello@anselm.in\n\nMuchas gracias a los siguientes, que con su gran corazón ayudaron a traducir Torchie</string>
     <string name="about_anselm">Acerca Anselm &amp; Anselm</string>
     <string name="official_website">Visita el sitio oficial</string>
     <string name="join_community">Únete a la Comunidad Beta</string>
