--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -58,7 +58,7 @@
         \nDe plus, Torchie <b>N\'A PAS L\'AUTORISATION INTERNET</b>, il est donc impossible <i>d\'envoyer</i> quoique ce soit à qui que ce soit\n\n Torchie ne peut PAS <i>COLLECTER</i> de données. N\'hésitez plus à activer les fonctionnalités Torchie ! <a href="https://torchieapp.wordpress.com/help/">En savoir plus</a> </string>
     <string name="permission">Activer les fonctionnalités Torchie ?</string>
 
-    <string name="about_note"><b>Torchie</b> est conçu par deux frères\nMerbin J Anselm et Rebin J Anselm\nanselmbros@gmail.com\n\nMille mercis à ceux qui ont aidé à traduire Torchie</string>
+    <string name="about_note"><b>Torchie</b> est conçu par deux frères\nMerbin J Anselm et Rebin J Anselm\nhello@anselm.in\n\nMille mercis à ceux qui ont aidé à traduire Torchie</string>
     <string name="about_anselm">À propos de Anselm et Anselm</string>
     <string name="official_website">Visitez le site officiel</string>
     <string name="join_community">Rejoignez la communauté Béta</string>
@@ -89,7 +89,7 @@
     <string name="torch_time_out">Extinction lampe torche</string>
     <string name="language_select">Choisir une langue</string>
     
-    <string name="notice"><b>Torchie</b> v%1$s  &#169; 2016\n\nTorchie est publié sans aucune garantie. Ce programme est un logiciel libre licencié sous
+    <string name="notice"><b>Torchie</b> v%1$s  &#169; 2019\n\nTorchie est publié sans aucune garantie. Ce programme est un logiciel libre licencié sous
     \nGNU General Public License v2.0\nLe code source est disponible ici https://github.com/anselm94/torchie-android\n</string>    
     
 </resources>
