--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -58,7 +58,7 @@
         \nInoltre, Torchie <b>NON RICHIEDE L\'ACCESSO A INTERNET</b>, così è impossibile <i>inviare</i> qualunque cosa a qualcuno\n\n Torchie NON PUÒ <i>RACCOGGLIERE</i> niente da nessuno. Sentiti tranquillo ad abilitare Torchie! <a href="https://torchieapp.wordpress.com/help/">Leggi di più</a> </string>
     <string name="permission">Abilitare le funzionalità di Torchie?</string>
 
-    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2015</i> \n\n<b>Torchie</b> è sviluppata da due fratelli\nMerbin J Anselm e Rebin J Anselm\nanselmbros@gmail.com\n\nMolte grazie alle seguenti persone che hanno aiutato nella traduzione di Torchie</string>
+    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2015</i> \n\n<b>Torchie</b> è sviluppata da due fratelli\nMerbin J Anselm e Rebin J Anselm\nhello@anselm.in\n\nMolte grazie alle seguenti persone che hanno aiutato nella traduzione di Torchie</string>
     <string name="about_anselm">Riguardo a Anselm &amp; Anselm</string>
     <string name="official_website">Visita il sito ufficiale</string>
     <string name="join_community">Entra nella community beta</string>
