--- a/app/src/main/res/values-mn/strings.xml
+++ b/app/src/main/res/values-mn/strings.xml
@@ -58,7 +58,7 @@
         \nМөн, <b>Интернетэд холбогдох эрх</b>гүй бол Гэрэлтэгчийг бусдад түгээх, хандив өгөх зэрэг нь боломжгүй болох юм. Гэрэлтэгчийн үйл ажиллагааг идвэхжүүлээд чөлөөтэй байдлыг мэдрээрэй! <a href="https://torchieapp.wordpress.com/help/">Илүү ихийг</a> </string>
     <string name="permission">Гэрэлтүүлэгчийн үйл ажиллагааг идвэхжүүлэх үү?</string>
 
-    <string name="about_note"><i>Гэрэлтүүлэгч - Хүрээд гэрэлтүүл &#169; 2016</i> \n\n<b>Гэрэлтүүлэгч</b> нь ах дүү хоёрын бүтээл юм\nMerbin J Anselm болон Rebin J Anselm\nanselmbros@gmail.com\n\nБиднийг дэмжсэнд болон орчуулахад тусалсанд баярлалаа</string>
+    <string name="about_note"><i>Гэрэлтүүлэгч - Хүрээд гэрэлтүүл &#169; 2019</i> \n\n<b>Гэрэлтүүлэгч</b> нь ах дүү хоёрын бүтээл юм\nMerbin J Anselm болон Rebin J Anselm\nhello@anselm.in\n\nБиднийг дэмжсэнд болон орчуулахад тусалсанд баярлалаа</string>
     <string name="about_anselm">Anselm-ийн тухай &amp; Anselm</string>
     <string name="official_website">Албан ёсны сайтад зочлох</string>
     <string name="join_community">Туршигчдын хөдөлгөөнд нэгдэх</string>
