--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -57,7 +57,7 @@
         \nAlso, Torchie <b>Nese nuk keni internet</b>, atehere eshte e pamundur <i>qe te dergoj</i>donje te dhene\n\n Torchie nuk mundet <i>te mbledh</i> asgje prej askujt. Dihuni te lire per te perdorur Torch-in! <a href="https://torchieapp.wordpress.com/help/">Per me shume</a> </string>
     <string name="permission">Enable Torchie Functionality?</string>
 
-    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2016</i> \n\n<b>Torchie</b> eshte projektuar prej dy vellezerve\nMerbin J Anselm and Rebin J Anselm\nanselmbros@gmail.com\n\nShume falenderime per mbeshtetjen, dhe per ata qe kane perkthyer Torchie</string>
+    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2019</i> \n\n<b>Torchie</b> eshte projektuar prej dy vellezerve\nMerbin J Anselm and Rebin J Anselm\nhello@anselm.in\n\nShume falenderime per mbeshtetjen, dhe per ata qe kane perkthyer Torchie</string>
     <string name="about_anselm">Rreth Anselm &amp; Anselm</string>
     <string name="official_website">Vizitoni faqen zyrtare</string>
     <string name="join_community">Join Beta Community</string>
