--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -58,7 +58,7 @@
 Torchie ANVÄNDER SIG INTE HELLER AV INTERNET TILLSTÅND, så det är omöjligt att skicka vidare privat information från din enhet. Så du kan aktivera Torchie funktionaliteter utan att oroa dig! <a href="https://torchieapp.wordpress.com/help/">Läs mer</a> </string>
     <string name="permission">Aktivera \'Torchie Funktionaliteter\'?</string>
 
-    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2016</i> \n\n<b>Torchie</b> is made by two brothers\nMerbin J Anselm and Rebin J Anselm\nanselmbros@gmail.com\n\nEtt stort tack till de som hjälpte till att översätta Torchie</string>
+    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2019</i> \n\n<b>Torchie</b> is made by two brothers\nMerbin J Anselm and Rebin J Anselm\nhello@anselm.in\n\nEtt stort tack till de som hjälpte till att översätta Torchie</string>
     <string name="about_anselm">Om Anselm &amp; Anselm</string>
     <string name="official_website">Besök den officiella hemsidan</string>
     <string name="join_community">Gå med i Beta gruppen</string>
